# apertium-html-tools

./: .dockerignore  .eslintignore  .eslintrc.js  .eslintrc.json  .flowconfig  .gitignore  .hound.yml  .htmlhintrc.json  .prettierignore  .prettierrc.toml  .scss-lint.yml  .stylelintignore  .travis.yml  Dockerfile  Gruntfile.js  Makefile  README  README.md  build.ts  config-custom.conf  config.conf.example  config.ts  custom.conf  debug-head.html  docker-compose.yml  doctranslate.patch  flow-coverage.json  fra.json  index.html  index.html.in  isobork  jest.config.ts  js.sh  locales.json  localise-html.py  minify-json.py  not-found.html  package-lock.json  package.json  prod-head.html  (+6 more)
.circleci/: config.yml
.github/workflows/: build.yml  check.yml
apertium-apy/apertium-apy/: langNames.db
assets/: manifest.json
assets/css/: .sass-lint.yml  .scss-lint.yml  analysis.css  bootstrap.css  buttons.css  colors.css  dropDown.css  footer.css  general.css  navbar.css  nojs.css  removeinline.css  rtl.css  style.css  translation.css
assets/js/: .dir-locals.el  .eslintrc.js  .eslintrc.json  analyzer.js  buttons.js  caching.js  compat.js  config.js  flow.js  generator.js  improver.js  init.js  jquery.jsonp-2.4.0.min.js  localization.js  persistence.js  sandbox.js  spellchecker.js  spelling.js  store.js  strict.js  sw.js  translator.js  util.js
assets/strings/: Makefile  README.md  ara.json  arg.json  (+43 more)
docker/: Dockerfile  apy.Dockerfile  deploy-all-pairs.sh  nginx.conf
flow-typed/: apertium.js  config.js.flow  jquery.js.flow
html/: added feedback buttons.html  debug-head.html  index.html.in  not-found.html  prod-head.html
interfaces/: config.js.flow  jquery.js.flow
scss/: custom.scss
src/: App.tsx  app.css  app.tsx  bootstrap.css  context.ts  globals.d.ts  index.html  index.tsx  rtl.css  testEnvSetup.ts  testSetup.ts  types.ts
tests/: a.js  test.js
tools/: .flake8.ini  conf-dtypes.txt  conf-fields.txt  langNamesScraper.py  localise-html.py  minify-css.py  minify-js.py  minify-json.py  read-conf.py
trunk/apertium-tools/apertium-dbus/: AUTHORS  Makefile.am  README  autogen.sh  configure.in  org.apertium.info.service.in  org.apertium.mode.service.in  setup.py
trunk/apertium-tools/apertium-dbus/src/: Makefile.am  command_line.py  info.py  mode.py  service.py
trunk/apertium-tools/apertium-utils/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure.in
trunk/apertium-tools/apertium-utils/cognate-indux/: Makefile.am  Makefile.in  afr.xml  cognate.cpp  entry.cpp  entry.h  hin.xml  per.xml  similarity.cpp  similarity.h  tgk.xml  transliterate.cpp  transliterate.h  urd.xml
trunk/apertium-tools/apertium-utils/morph-indux/: Makefile.am  Makefile.in  README  morph.cpp  paradigm.cpp  paradigm.h  test.en.txt  test.sh.txt  test.tg.txt  trie.cpp  trie.h
trunk/apertium-tools/apertium-utils/transliterate/: Makefile.am  Makefile.in  XMLParseUtil.cpp  XMLParseUtil.h  entry.cpp  entry.h  hin.xml  main.cpp  per.tr.xml  ron.tr.xml  tgk.tr.xml  transliterate.cpp  transliterate.h  transliterator.dtd  urd.tr.xml
(+220 files in other folders)
